syntax = "proto3";

package user;

service UserService {
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
  rpc FindAll (Empty) returns (UserList);
  rpc FindOne (IdRequest) returns (UserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser (IdRequest) returns (UserResponse);
}

message Address {
  string city = 1;
  string district = 2;
  string street = 3;
  string zip_code = 4;
}

message CreateUserRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string phone = 4;
  Address address = 5;
  string profile_picture_url = 6;
}

message UpdateUserRequest {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone = 5;
  Address address = 6;
  string profile_picture_url = 7;
}

message UserResponse {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone = 5;
  Address address = 6;
  string profile_picture_url = 7;
}

message UserList {
  repeated UserResponse users = 1;
}

message IdRequest {
  string id = 1;
}

message Empty {}